# database_universe

./: README.md  pubspec.yaml
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml  release.yaml
examples/example/: pubspec.yaml
native_lib/: CMakeLists.txt  readme.md
package/database_universe/: .gitignore  CHANGELOG.md  pubspec.yaml  pubspec_overrides.yaml
package/database_universe/example/: example.dart  examples.dart
package/database_universe/lib/: database_universe.dart  database_universe_core.dart  database_universe_data.dart  database_universe_type.dart
package/database_universe_android/: pubspec.yaml
package/database_universe_android/lib/: database_universe_android.dart
package/database_universe_android/test/: database_universe_android_test.dart
package/database_universe_apis/: pubspec.yaml
package/database_universe_apis/example/: database_universe_apis_example.dart
package/database_universe_apis/lib/: database_universe_apis.dart
package/database_universe_apis/test/: database_universe_apis_test.dart
package/database_universe_assets_flutter/: pubspec.yaml
package/database_universe_assets_flutter/lib/: database_universe_assets_flutter.dart
package/database_universe_cli/: pubspec.yaml
package/database_universe_client/: README.md  pubspec.yaml
package/database_universe_dart/: pubspec.yaml  pubspec_overrides.yaml
package/database_universe_dart/lib/api/: extensions.dart  (+2 more)
package/database_universe_flutter/: pubspec.yaml  pubspec_overrides.yaml
package/database_universe_flutter_libs/: CHANGELOG.md  pubspec.yaml
package/database_universe_fucshia/: pubspec.yaml
package/database_universe_ios/: pubspec.yaml
package/database_universe_isar_scheme/: pubspec.yaml
package/database_universe_linux/: pubspec.yaml
package/database_universe_macos/: pubspec.yaml
package/database_universe_scheme/: pubspec.yaml
package/database_universe_server/: pubspec.yaml
package/database_universe_web/: pubspec.yaml
package/database_universe_windows/: pubspec.yaml
test/: database_universe_test.dart
(+41 files in other folders)
